# hexencer

./: Cargo.toml  Makefile.toml  README.md  build_doc.ps1  release-plz.toml  rustfmt.toml
assets/fonts/: license.txt  read me.txt
core/: Cargo.toml
core/src/: data.rs  event.rs  instrument.rs  lib.rs  note.rs  trig.rs
core/src/data/: clip.rs  common.rs  event_list.rs  midi_event.rs  midi_message.rs  project.rs  track.rs  trig_list.rs
engine/: Cargo.toml
engine/src/: lib.rs  midi.rs  midi_engine.rs  sequencer.rs
gui/: Cargo.toml
gui/src/: arranger.rs  gui.rs  main.rs  memory.rs  style.rs  track.rs  ui.rs  utility.rs  viewport.rs  widget.rs  widgets.rs
gui/src/gui/: core.rs  viewport.rs
gui/src/ui/: common.rs  element.rs
gui/src/ui/element/: clip.rs  note_editor.rs  timeline.rs  track.rs
gui/src/ui/element/note_editor/: bounds.rs  transform.rs
gui/src/widget/: arranger.rs  clip.rs  event_editor.rs  event_segment.rs  event_track.rs  track.rs
gui/src/widget/arranger/: cursor.rs  internals.rs  line.rs
gui/src/widgets/: clip.rs  track.rs
gui2/: Cargo.toml
gui_old/: Cargo.toml
gui_old/src/: main.rs  style.rs  theme.rs
gui_old/src/widgets/: clip.rs  track.rs
src/: main.rs
