[workspace]
resolver="2"
members= [
  "engine",
  "gui"
, "core"]
default-run = "gui"

[workspace.dependencies]
tokio ={ version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = {version="1.8.0", features = ["v4"]}
once_cell = "1.19.0"
thiserror = "1.0.61"
coverage-helper = "0.1"
