[package]
name = "hexencer-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://github.com/PORTALSURFER/hexencer"
repository = "https://github.com/PORTALSURFER/hexencer"
homepage = "https://github.com/PORTALSURFER/hexencer"

[dependencies]
## workspace
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
uuid = {workspace=true}
