[package]
name = "hexencer-engine"
version = "0.2.0"
edition = "2021"

license = "MIT"
documentation = "https://github.com/PORTALSURFER/hexencer"
repository = "https://github.com/PORTALSURFER/hexencer"
homepage = "https://github.com/PORTALSURFER/hexencer"
[dependencies]
midir = "0.10.0"
eframe = "0.27.2"

## workspace
tokio = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}

## internal libs
hexencer-core={path="../core"}
