[package]
name = "hexencer-gui"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://github.com/PORTALSURFER/hexencer"
repository = "https://github.com/PORTALSURFER/hexencer"
homepage = "https://github.com/PORTALSURFER/hexencer"

[dependencies]

iced = {version="0.12.1", features=["canvas", "advanced"]}
image = "0.25.1"
winit = "0.30.0"

## workspace
tokio = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
thiserror = {workspace=true}

## internal libs
hexencer-core={path="../core"}
hexencer-engine={path="../engine"}
