[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]

iced = {git="https://github.com/iced-rs/iced", features=["canvas", "advanced", "wgpu", "debug"]}
image = "0.25.1"
winit = "0.30.0"

## workspace
tokio = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
thiserror = {workspace=true}

## internal libs
hexencer-core={path="../core"}
hexencer-engine={path="../engine"}
mockall = "0.12.1"
